# RUBCalSync

./: .gitignore  Readme.md  pyproject.toml  template-settings.json
.github/workflows/: tests.yml
rub_calendar_sync/: __main__.py  sync_cals.py
rub_calendar_sync/models/: Event.py  __init__.py
rub_calendar_sync/providers/: BaseCalendarProvider.py  CalDavProvider.py  GoogleProvider.py  RubSOGoProvider.py  __init__.py
scripts/: sync.sh
tests/: fakes.py  test_sync.py
